권한 저장 시 오류발생 해결